--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
@@ -10,12 +11,14 @@
 <body>
     <nav id="desktop-nav">
         <div class="logo">Simon Piwcewicz</div>
+        <div>
         <ul class="nav-links">
             <li><a href="#about">About Me</a></li>
             <li><a href="#experience">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
+        </div>
     </nav>
     <script src="script.js"></script>
 </body>
